# mate-university

./: AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac  mate-university.spec
applet-c/: Makefile.am  about.c  about.h  applet.c  applet.h  org.mate.panel.applet.UniversityAppletFactory.service.in  org.mate.university.Applet.mate-panel-applet.in  org.mate.university.Applet.mate-panel-applet.in.in
applet-python/: Makefile.am  org.mate.panel.applet.UniversityPythonAppletFactory.service.in  org.mate.university.PythonApplet.mate-panel-applet.in  org.mate.university.PythonApplet.mate-panel-applet.in.in  university-python-applet
cairo-test/: Makefile.am  cairo-test.c
debian/: changelog  control  copyright  rules  watch
po/: POTFILES.in  it.po
